# tadawol

./: .gitignore  Procfile  Simulation.ipynb  api.py  commands.py  main.py  requirements.txt  setup.cfg  setup.py  tasks.py  test-requirements.txt  test.py  tox.ini
.ipynb_checkpoints/: Simulation-checkpoint.ipynb
tadawol/: config.py  earnings.py  history.py  simulator.py  stats.py  utils.py  yahoo.py
tadawol.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tadawol/data/: tickers_list.csv
tadawol/services/: email.py
tadawol/strategies/: base_strategy.py  earnings.py  macd.py  record.py  recovery.py  reverse.py
