[metadata]
name = tadawol
version = 0.1.0
author = Yassine Ameur
author-email = amartin@unowhy.com
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
keywords = tadawol, trading

[tool:pytest]
testpaths = tests
log_cli = False
log_cli_level = INFO

[flake8]
max-line-length = 120

[mypy]
python_version = 3.7
no_implicit_optional = True
ignore_missing_imports = True
